lab/base/policies/cilium-default-deny-payments.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny-payments
  namespace: payments
spec:
  endpointSelector: {}
  ingress: []
  egress: []
