lab/base/policies/kyverno-secure-baseline.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: lab-require-secure-baseline
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-secure-context
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - payments
      validate:
        message: "Payments pods must use secure baseline settings."
        pattern:
          spec:
            containers:
              - securityContext:
                  allowPrivilegeEscalation: false
                  runAsNonRoot: true
                  capabilities:
                    drop:
                      - ALL
                  seccompProfile:
                    type: RuntimeDefault
